Alignment on all components of assignment show corrected

--- a/web/app/assets/stylesheets/assignments.css.scss
+++ b/web/app/assets/stylesheets/assignments.css.scss
@@ -44,7 +44,7 @@ body {
 
 .streaks {
   h4 {
-    padding-left: 0.6em;
+    padding-left: 0.85em;
     padding-bottom: 0.3em;
   }
   background-image: image-url('bg.png');
@@ -72,6 +72,9 @@ body {
   margin-top: 1.6em;
   height: 6em;
   background-image: image-url('bg.png');
+  p {
+    padding-top: 0.2em;
+  }
 }
 
 .previous-correct {
